--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HOLA DIEGO Y DANIEL</h1>
+    <h1>Página Web</h1>
+    <p>Este es un párrafo de ejemplo.</p>
+    <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada">Enlace 1</a>
+    <a href="https://github.com">Enlace 2</a>
+    <img src="images.jpg" alt="">
 </body>
 </html>
