--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Página Web</title>
+   
+    <link rel="stylesheet" href="MisEstilos1.css">
 </head>
 <body>
-    <h1>Página Web</h1>
-    <p>Este es un párrafo de ejemplo.</p>
-    <a href="https://es.wikipedia.org/wiki/Wikipedia:Portada">Enlace 1</a>
-    <a href="https://github.com">Enlace 2</a>
-    <img src="images.jpg" alt="">
+    <h1>Bienvenidos a mi página web</h1>
+    <p>Esta página tiene funciones interactivas y estilos personalizados.</p>
+
+   
+    <button onclick="miFuncion1()">Función 1</button>
+    <button onclick="miFuncion2()">Función 2</button>
+
+
+    <script src="MisFunciones.js"></script>
 </body>
 </html>
